preprocessing the data - normalize signals

--- a/notebooks/01_explore_subject1.ipynb
+++ b/notebooks/01_explore_subject1.ipynb
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "9135c8c0",
    "metadata": {},
    "outputs": [
@@ -347,9 +347,7 @@
       "1. EEG signals are noisy but contain patterns\n",
       "2. Different movements show subtle differences\n",
       "3. Motor imagery appears in 8-30 Hz frequencies\n",
-      "4. Data is clean, balanced, and ready for processing\n",
-      "\n",
-      "✓ Ready for Day 3: Preprocessing Pipeline!\n"
+      "4. Data is clean, balanced, and ready for processing\n"
      ]
     }
    ],
@@ -382,8 +380,7 @@
     "print(\"1. EEG signals are noisy but contain patterns\")\n",
     "print(\"2. Different movements show subtle differences\")\n",
     "print(\"3. Motor imagery appears in 8-30 Hz frequencies\")\n",
-    "print(\"4. Data is clean, balanced, and ready for processing\")\n",
-    "print(\"\\n✓ Ready for Day 3: Preprocessing Pipeline!\")"
+    "print(\"4. Data is clean, balanced, and ready for processing\")\n"
    ]
   }
  ],
